# mcp-ollama-local

./: ._README.md  .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMO_ACTIVAR_MODELOS.md  CONTRIBUTING.md  Dockerfile  ENVIRONMENT_SETUP.md  FILE_ARCHITECTURE.md  GLOSSARY.md  INSTALL.md  LICENSE  Makefile  NOTICE  README.md  RECRUITER.md  ROADMAP.md  SECURITY.md  SYSTEM_SPECS.md  TROUBLESHOOTING.md  USER_MANUAL.md  docker-compose.yml  killed.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  scorecard.yml  security.yml  semgrep.yml  supply-chain.yml
apps/cli/: chat.py
apps/web/: ._app.py  app.py
apps/web/static/: app.js
apps/web/templates/: ._options.html  chat.html  history.html  index.html  options.html
docs/: aws-migration.md  security-trust-profile.md  security-verification.md
host/: chat_engine.py  mcp_bridge.py  ollama_client.py  settings.py
k8s/: deploy.yaml  service.yaml
mcp_server/: server.py
scripts/: audit.sh  ci_local.sh  run_web.sh  sbom.sh  semgrep.sh  trust_check.sh
semgrep-rules/: README.md  api-key-default.yml  cors-wildcard.yml  local-bind.yml  network-timeout.yml  subprocess-shell.yml
tests/: test_api.py
