[project]
name = "mcp-ollama-local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.126.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.25.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-cov>=7.0.0",
    "ruff>=0.9.2",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", ".ruff_cache", "k8s"]
skips = ["B104"] # B104 es bind a interfaces abiertas (0.0.0.0), es intencional en web apps dockerizadas
