[project]
name = "mcp-ollama-local"
version = "0.1.0"
description = "Local-first chat UI for Ollama with a constrained MCP tool bridge."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.25.0",
    "uvicorn>=0.40.0",
    # Transitive deps pinned to avoid known CVEs:
    # python-dotenv  CVE-2026-28684  fix in 1.2.2
    # python-multipart CVE-2026-40347 fix in 0.0.26
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "mypy>=1.14.1",
    # pytest CVE-2025-71176 fixed in 9.0.3
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",
    "ruff>=0.9.2",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", ".ruff_cache", "k8s"]
skips = ["B104"] # B104 es bind a interfaces abiertas (0.0.0.0), es intencional en web apps dockerizadas
